--- a/QuizPro/app/src/main/res/layout/activity_menu.xml
+++ b/QuizPro/app/src/main/res/layout/activity_menu.xml
@@ -69,7 +69,7 @@
         android:layout_width="295dp"
         android:layout_height="293dp"
         android:gravity="center"
-        android:text="Vas a empezar como anonimo, ¿Estas seguro?"
+        android:text="@string/vas_a_empezar_como_anonimo_estas_seguro"
         android:textColor="#fff"
         android:textSize="40sp"
         android:visibility="invisible"
@@ -86,7 +86,7 @@
         android:layout_height="100dp"
         android:background="@drawable/buttonshapecolor"
         android:onClick="Confirm"
-        android:text="si"
+        android:text="@string/si"
         android:textColor="#fff"
         android:textSize="24sp"
         android:visibility="invisible"
@@ -101,7 +101,7 @@
         android:layout_marginTop="36dp"
         android:background="@drawable/buttonshapecolor"
         android:onClick="Deny"
-        android:text="no"
+        android:text="@string/no"
         android:textColor="#fff"
         android:textSize="24sp"
         android:visibility="invisible"
