--- a/QuizPro/app/src/main/res/layout/activity_configuration.xml
+++ b/QuizPro/app/src/main/res/layout/activity_configuration.xml
@@ -26,7 +26,7 @@
         android:layout_width="329dp"
         android:layout_height="80dp"
         android:gravity="center"
-        android:text="Perfiles"
+        android:text="@string/perfiles"
         android:textColor="#fff"
         android:textSize="40sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,7 +44,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="chooseProfile"
-        android:text="Gestionar"
+        android:text="@string/gestionar"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -56,7 +56,7 @@
         android:layout_width="329dp"
         android:layout_height="80dp"
         android:gravity="center"
-        android:text="Dificultad"
+        android:text="@string/dificultad"
         android:textColor="#fff"
         android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -70,7 +70,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="setDifficulty"
-        android:text="5 preguntas"
+        android:text="@string/_5_preguntas"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -81,7 +81,7 @@
         android:layout_width="363dp"
         android:layout_height="80dp"
         android:gravity="center"
-        android:text="Preguntas"
+        android:text="@string/preguntas"
         android:textColor="#fff"
         android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -96,7 +96,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="setQuestions"
-        android:text="Conjunto 1"
+        android:text="@string/conjunto_1"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
