--- a/QuizPro/app/src/main/res/layout/activity_profile.xml
+++ b/QuizPro/app/src/main/res/layout/activity_profile.xml
@@ -12,7 +12,7 @@
         android:layout_width="329dp"
         android:layout_height="121dp"
         android:gravity="center"
-        android:text="Perfiles"
+        android:text="@string/perfiles"
         android:textColor="#fff"
         android:textSize="40sp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -52,7 +52,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="selectUser"
-        android:text="Seleccionar usuario"
+        android:text="@string/seleccionar_usuario"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -66,7 +66,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="createUserMenu"
-        android:text="Crear usuario"
+        android:text="@string/crear_usuario"
         android:textSize="30sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -77,7 +77,7 @@
         android:layout_width="329dp"
         android:layout_height="80dp"
         android:gravity="center"
-        android:text="Crear usuario"
+        android:text="@string/crear_usuario"
         android:layout_marginTop="16dp"
         android:textColor="#fff"
         android:textSize="40sp"
@@ -107,7 +107,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="createUser"
-        android:text="Confirmar"
+        android:text="@string/confirmar"
         android:textSize="30sp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -122,7 +122,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="updatePhoto"
-        android:text="Modificar"
+        android:text="@string/modificar"
         android:textSize="15sp"
         android:visibility="invisible"
         app:layout_constraintHorizontal_bias="0.0"
@@ -138,7 +138,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="deleteUser"
-        android:text="Eliminar"
+        android:text="@string/eliminar"
         android:textSize="15sp"
         android:visibility="invisible"
         app:layout_constraintHorizontal_bias="1.0"
@@ -169,7 +169,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="deleteUserConfirm"
-        android:text="si"
+        android:text="@string/si"
         android:textSize="24sp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -185,7 +185,7 @@
         android:background="@drawable/buttonshapecolor"
         android:textColor="#fff"
         android:onClick="deleteUserDeny"
-        android:text="no"
+        android:text="@string/no"
         android:textSize="24sp"
         android:visibility="invisible"
         app:layout_constraintLeft_toLeftOf="parent"
