Acabada app y ampliada memoria

--- a/QuizPro/app/src/main/res/layout/activity_profile.xml
+++ b/QuizPro/app/src/main/res/layout/activity_profile.xml
@@ -116,7 +116,8 @@
 
     <Button
         android:id="@+id/update"
-        android:layout_width="182dp"
+        android:layout_width="wrap_content"
+        android:minWidth="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="155dp"
         android:background="@drawable/buttonshapecolor"
@@ -132,7 +133,8 @@
 
     <Button
         android:id="@+id/delete"
-        android:layout_width="187dp"
+        android:layout_width="wrap_content"
+        android:minWidth="200dp"
         android:layout_height="50dp"
         android:layout_marginTop="155dp"
         android:background="@drawable/buttonshapecolor"
