--- a/QuizPro/app/src/main/res/layout/activity_questions.xml
+++ b/QuizPro/app/src/main/res/layout/activity_questions.xml
@@ -45,7 +45,7 @@
             android:layout_height="37dp"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="0dp"
-            android:text="Aciertos/Fallos: 0/0"
+            android:text="A/F: 0/0"
             android:textColor="@color/cardview_light_background"
             android:textSize="10sp" />
     </RelativeLayout>
