--- a/QuizPro/app/src/main/res/layout/list_item2.xml
+++ b/QuizPro/app/src/main/res/layout/list_item2.xml
@@ -28,10 +28,10 @@
         android:id="@+id/max_points"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/nickname"
         android:layout_alignTop="@+id/nickname"
-        android:layout_marginStart="263dp"
-        android:layout_marginTop="2dp"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="30dp"
         android:text="txt"
         android:textSize="20sp" />
 
