--- a/Scaffold/app/src/main/res/layout/fragment_game.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_game.xml
@@ -15,12 +15,20 @@
     <Button
         android:layout_gravity="top|right"
         android:id="@+id/btn_play_pause"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginTop="16dp"
         android:layout_marginRight="@dimen/activity_vertical_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/pause" />
 
+    <TextView
+        android:layout_gravity="top|left"
+        android:id="@+id/lives"
+        android:layout_marginTop="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Lives: " />
     <include layout="@layout/view_joystick"/>
 
 </FrameLayout>
