--- a/Scaffold/app/src/main/res/layout/fragment_end_game.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_end_game.xml
@@ -12,6 +12,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/score"
+        style="@android:style/TextAppearance.DeviceDefault.Large"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:text="@string/game_title" />
+
     <Button
         android:id="@+id/btn_finish"
         android:layout_width="wrap_content"
