--- a/Scaffold/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_main_menu.xml
@@ -19,4 +19,12 @@
         android:layout_gravity="center"
         android:text="@string/start" />
 
+    <Button
+        android:id="@+id/btn_config"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="50dp"
+        android:text="Config" />
+
 </FrameLayout>
