--- a/Scaffold/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_main_menu.xml
@@ -2,29 +2,37 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     >
 
     <TextView
+        android:id="@+id/textView"
         android:layout_gravity="center_horizontal|top"
         style="@android:style/TextAppearance.DeviceDefault.Large"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/game_title"
+        android:layout_marginTop="60dp"
+        android:text="Space War"
+        android:textColor="#fff"
+        android:textSize="60sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <Button
         android:id="@+id/btn_start"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
+        android:textSize="20sp"
+        android:background="@drawable/buttonshapecholor"
         android:text="@string/start" />
 
     <Button
         android:id="@+id/btn_config"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:textSize="20sp"
+        android:background="@drawable/buttonshapecholor"
+        android:layout_marginTop="80dp"
         android:text="Config" />
 
 </FrameLayout>
