--- a/Scaffold/app/src/main/res/layout/fragment_ship.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_ship.xml
@@ -2,17 +2,20 @@
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background2">
 
 
     <TextView
         android:id="@+id/textView"
-        android:layout_gravity="top"
-        android:layout_width="329dp"
+        android:layout_gravity="center_horizontal|top"
+        android:layout_width="400dp"
         android:layout_height="121dp"
-        android:text="Elige nave"
-        android:layout_marginStart="180dp"
-        android:textSize="60sp"
+        android:text="Ship selection"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:textColor="#fff"
+        android:textSize="40sp"
         android:visibility="visible" />
 
     <ImageButton
@@ -21,9 +24,10 @@
         android:layout_height="132dp"
         android:layout_marginTop="80dp"
         android:layout_marginStart="100dp"
+        android:background="@drawable/buttonshapecholor"
         android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/ship1" />
+        android:src="@drawable/a1" />
 
     <ImageButton
         android:id="@+id/ship2"
@@ -32,9 +36,10 @@
         android:layout_gravity="end"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="100dp"
+        android:background="@drawable/buttonshapecholor"
         android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/ship2" />
+        android:src="@drawable/a2" />
 
     <ImageButton
         android:id="@+id/ship3"
@@ -42,9 +47,10 @@
         android:layout_height="132dp"
         android:layout_marginStart="100dp"
         android:layout_marginTop="220dp"
+        android:background="@drawable/buttonshapecholor"
         android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/ship3" />
+        android:src="@drawable/a3" />
 
     <ImageButton
         android:id="@+id/ship4"
@@ -53,9 +59,10 @@
         android:layout_gravity="end"
         android:layout_marginTop="220dp"
         android:layout_marginEnd="100dp"
+        android:background="@drawable/buttonshapecholor"
         android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/ship4" />
+        android:src="@drawable/a4" />
 
 
 </FrameLayout>
