--- a/Scaffold/app/src/main/res/layout/fragment_end_game.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_end_game.xml
@@ -2,13 +2,17 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background2"
     >
 
     <TextView
+        android:id="@+id/titleGame"
         android:layout_gravity="center_horizontal|top"
         style="@android:style/TextAppearance.DeviceDefault.Large"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/game_title"
+        android:layout_marginTop="60dp"
+        android:text="Space War"
+        android:textColor="#fff"
+        android:textSize="60sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
@@ -17,15 +21,20 @@
         style="@android:style/TextAppearance.DeviceDefault.Large"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal|top"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:text="@string/game_title" />
+        android:textColor="#fff"
+        android:layout_gravity="center"
+        android:textSize="40sp"
+        android:text="Points" />
 
     <Button
         android:id="@+id/btn_finish"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
         android:layout_gravity="center"
+        android:background="@drawable/buttonshapecholor"
         android:text="Menu" />
+
+
 
 </FrameLayout>
