--- a/Scaffold/app/src/main/res/layout/fragment_main_menu.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_main_menu.xml
@@ -10,7 +10,7 @@
         android:layout_gravity="center_horizontal|top"
         style="@android:style/TextAppearance.DeviceDefault.Large"
         android:layout_marginTop="60dp"
-        android:text="Space War"
+        android:text="@string/space_war"
         android:textColor="#fff"
         android:textSize="60sp"
         android:layout_width="wrap_content"
@@ -33,6 +33,6 @@
         android:textSize="20sp"
         android:background="@drawable/buttonshapecholor"
         android:layout_marginTop="80dp"
-        android:text="Config" />
+        android:text="@string/config" />
 
 </FrameLayout>
