--- a/Scaffold/app/src/main/res/layout/fragment_ship.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_ship.xml
@@ -11,8 +11,8 @@
         android:layout_gravity="center_horizontal|top"
         android:layout_width="400dp"
         android:layout_height="121dp"
-        android:text="Ship selection"
-        android:layout_marginLeft="10dp"
+        android:text="@string/ship_selection"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:textColor="#fff"
         android:textSize="40sp"
@@ -25,9 +25,9 @@
         android:layout_marginTop="80dp"
         android:layout_marginStart="100dp"
         android:background="@drawable/buttonshapecholor"
-        android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/a1" />
+        android:src="@drawable/a1"
+        android:contentDescription="@string/todo" />
 
     <ImageButton
         android:id="@+id/ship2"
@@ -37,9 +37,9 @@
         android:layout_marginTop="80dp"
         android:layout_marginEnd="100dp"
         android:background="@drawable/buttonshapecholor"
-        android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/a2" />
+        android:src="@drawable/a2"
+        android:contentDescription="@string/todo" />
 
     <ImageButton
         android:id="@+id/ship3"
@@ -48,9 +48,9 @@
         android:layout_marginStart="100dp"
         android:layout_marginTop="220dp"
         android:background="@drawable/buttonshapecholor"
-        android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/a3" />
+        android:src="@drawable/a3"
+        android:contentDescription="@string/todo" />
 
     <ImageButton
         android:id="@+id/ship4"
@@ -60,9 +60,9 @@
         android:layout_marginTop="220dp"
         android:layout_marginEnd="100dp"
         android:background="@drawable/buttonshapecholor"
-        android:onClick="imageClick"
         android:scaleType="fitCenter"
-        android:src="@drawable/a4" />
+        android:src="@drawable/a4"
+        android:contentDescription="@string/todo" />
 
 
 </FrameLayout>
