--- a/Scaffold/app/src/main/res/layout/fragment_game.xml
+++ b/Scaffold/app/src/main/res/layout/fragment_game.xml
@@ -20,7 +20,7 @@
         android:background="@drawable/buttonshapecholor"
         android:layout_width="wrap_content"
         android:layout_height="30dp"
-        android:text="@string/pause" />
+        android:text="@string/pause_game" />
 
     <include layout="@layout/view_joystick"/>
 
